--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@expo-google-fonts/dev": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.10",
+    "expo-av": "~13.4.1",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
