--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@expo-google-fonts/dev": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.10",
     "expo-av": "~13.4.1",
+    "expo-camera": "^13.6.0",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
